# caccia_al_tesoro

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
caccia_al_tesoro/: __init__.py  __main__.py  caccia_al_tesoro.py
tests/: test_integration.py  test_property.py  test_unit.py
